--- a/index.html
+++ b/index.html
@@ -173,10 +173,8 @@
                                         through<br>
                                         Partnership
                                     </h1>
-                                    <p class="text-white my-4">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white my-4 text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -203,10 +201,8 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -222,10 +218,8 @@
                                         through<br>
                                         Partnership
                                     </h1>
-                                    <p class="text-white my-4">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white my-4 text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -252,10 +246,8 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -271,10 +263,8 @@
                                         through<br>
                                         Partnership
                                     </h1>
-                                    <p class="text-white my-4">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white my-4 text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -301,10 +291,8 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -320,10 +308,8 @@
                                         through<br>
                                         Partnership
                                     </h1>
-                                    <p class="text-white my-4">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white my-4 text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -350,10 +336,8 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
@@ -369,10 +353,8 @@
                                         through<br>
                                         Partnership
                                     </h1>
-                                    <p class="text-white my-4">
-                                        Ansaf sangat tepat menjadi<br>
-                                        mitra karena memberikan solusi<br>
-                                        yang dibutuhkan klien
+                                    <p class="text-white my-4 text-justify w-75">
+                                        Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
                             </div>
