--- a/businesses.html
+++ b/businesses.html
@@ -341,9 +341,13 @@
         <div class="row">
           <div class="col-lg-7 pr-lg-0">
             <img class="close-mobile d-lg-none" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
-                <img class="w-100" src="images/business-new-content-06.jpg" alt="">
+                
+                <video class="w-100" controls>
+                  <source src="images/psm.mp4" type="video/mp4">
+                </video>
           </div>
           <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3">
+            <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
                 <img src="images/logo-bisnis-psm-05.png" alt="">
