--- a/businesses.html
+++ b/businesses.html
@@ -372,7 +372,9 @@ Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediak
         <div class="row">
           <div class="col-lg-7 pr-lg-0">
             <img class="close-mobile d-lg-none" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
-                <img class="w-100" src="images/business-new-content-05.jpg" alt="">
+            <video class="w-100" controls>
+              <source src="images/esp.mp4" type="video/mp4">
+            </video>
           </div>
           <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3">
             <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
