--- a/businesses.html
+++ b/businesses.html
@@ -339,7 +339,7 @@
     <div class="modal-content">
       <div class="modal-body">
         <div class="row">
-          <div class="col-lg-7 pr-lg-0">
+          <div class="col-lg-7 pr-lg-0 pt-lg-0 pt-5">
             <img class="close-mobile d-lg-none" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
                 
                 <video class="w-100" controls>
@@ -370,7 +370,7 @@ Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediak
     <div class="modal-content">
       <div class="modal-body">
         <div class="row">
-          <div class="col-lg-7 pr-lg-0">
+          <div class="col-lg-7 pr-lg-0 pt-lg-0 pt-5">
             <img class="close-mobile d-lg-none" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <video class="w-100" controls>
               <source src="images/esp.mp4" type="video/mp4">
