--- a/businesses.html
+++ b/businesses.html
@@ -354,7 +354,7 @@
                   <p class="text-gray">
                     PT Palaran Sinergi Mas bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Palaran, berupa stock pile seluas 32 hektar yang dapat menampung 250.000 mt batubara disamping menyediakan konveyor dengan kapasitas hingga 1.000 mt/jam.
                     <br><br>
-Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediakan jasa pelabuhan berkualitas sesuai kebutuhan pelanggan, mulai dari pengangkutan, penghalusaan dan pencampuran sehingga siap dikapalkan.
+Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediakan jasa pelabuhan berkualitas sesuai kebutuhan pelanggan, mulai dari pengangkutan, penghalusan dan pencampuran sehingga siap dikapalkan.
                   </p>
               </div>
             </div>
