--- a/businesses.html
+++ b/businesses.html
@@ -220,7 +220,7 @@
                   <img class="img-fluid w-100" src="images/business-image-placement-07.jpg" alt="">
                 </div>
                 <div class="col-lg-5 col-12 details">
-                  <p class="text-gray brief-details my-lg-0 my-5">
+                  <p class="text-gray brief-details text-justify my-lg-0 my-5">
                     Bersama mitra-mitra yang handal Ansaf membangun kerjasama menyediakan berbagai pelayanan yang dibutuhkan dalam bisnis penambangan batubara.
                   </p>
                 </div>
@@ -351,7 +351,7 @@
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
                 <img src="images/logo-bisnis-psm-05.png" alt="">
-                  <p class="text-gray">
+                  <p class="text-gray text-justify">
                     PT Palaran Sinergi Mas bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Palaran, berupa stock pile seluas 32 hektar yang dapat menampung 250.000 mt batubara disamping menyediakan konveyor dengan kapasitas hingga 1.000 mt/jam.
                     <br><br>
 Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediakan jasa pelabuhan berkualitas sesuai kebutuhan pelanggan, mulai dari pengangkutan, penghalusan dan pencampuran sehingga siap dikapalkan.
@@ -381,7 +381,7 @@ Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediak
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
                 <img src="images/logo-bisnis-esp-05.png" alt="">
-                  <p class="text-gray">
+                  <p class="text-gray text-justify">
                     PT Embalut Sinergi Mas Persada bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Embalut, berupa stock pile seluas 7 hektar berikut konveyor dengan kapasitas hingga 500 mt/jam.  Dermaga dapat mengakomodasi tongkang batubara ukuran 270 kaki hingga 300 kaki.  Diantara perusahaan yang menggunakan layanan ini adalah sebuah perusahaan tambang dari JSI Group.
                   </p>
               </div>
