--- a/projects.html
+++ b/projects.html
@@ -188,6 +188,18 @@
           <!-- Tab panes -->
           <div class="tab-content overflow-hidden">
             <div class="tab-pane py-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
+              <div class="row d-none d-lg-flex mb-5">
+                <div class="col-lg-1 offset-lg-1">
+                  <h5 class="d-flex">
+                    <i class="fas fa-circle text-dark-blue mr-2 mt-1"></i> Proyek
+                  </h5>
+                </div>
+                <div class="col-lg-1">
+                  <h5 class="d-flex">
+                    <i class="fas fa-circle text-orange mr-2 mt-1"></i> Kantor
+                  </h5>
+                </div>
+              </div>
               <div class="row d-none d-lg-block">
                 <div class="col-lg-12">
                   <div class="map-wrap">
@@ -436,6 +448,18 @@
               </div>
             </div>
             <div class="tab-pane py-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+              <div class="row d-none d-lg-flex mb-5">
+                <div class="col-lg-1 offset-lg-1">
+                  <h5 class="d-flex">
+                    <i class="fas fa-circle text-dark-blue mr-2 mt-1"></i> Proyek
+                  </h5>
+                </div>
+                <div class="col-lg-1">
+                  <h5 class="d-flex">
+                    <i class="fas fa-circle text-orange mr-2 mt-1"></i> Kantor
+                  </h5>
+                </div>
+              </div>
               <div class="row d-none d-lg-block">
                 <div class="col-lg-12">
                   <div class="map-wrap">
