--- a/career.html
+++ b/career.html
@@ -139,10 +139,10 @@
       </div>
     </div>
 </div>
-    <div class="container-fluid bus-white">
+    <div class="container-fluid about-top">
       <div class="row">
         <div class="col-lg-12 pl-0">
-          <img class="elements" src="images/segitiga-biru-kanan-half-05.png" alt="">
+          <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
