--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="menu d-lg-none">
                 <a href="#" class="menu-icon">
-                    <img src="images/menu-icon-15.png" alt="">
+                    <img src="images/menu-icon-white.png" alt="">
                 </a>
             </div>
             <div class="side-menu d-lg-none">
