--- a/about.html
+++ b/about.html
@@ -500,49 +500,51 @@
               </p>
             </div>
           </div>
-          <div class="row d-lg-none">
-            <div class="carousel-mobile-stagepadding owl-theme">
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-17.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Jujur dalam menampilkan perilaku produktif untuk memperoleh kepercayaan pelanggan.
-                </p>
-              </div>
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-18.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Mampu bergerak cepat berdasarkan rencana adaptif.
-                </p>
-              </div>
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-19.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Memberikan pekerjaan yang responsif, tepat waktu, dan berkualitas.
-                </p>
-              </div>
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-20.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Mengantisipasi kebutuhan dan persyaratan klien.
-                </p>
-              </div>
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-21.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Antusiasme dan pengabdian kepada pelanggan serta berbagi proses kreatif.
-                </p>
-              </div>
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-22.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Fokus pada solusi, bukan argumen, mengantisipasi masalah terlebih dahulu dan tetap mengingat tujuan akhir.
-                </p>
-              </div>
-              <div class="item">
-                <img class="mb-3" src="images/nilai-nilai-mobile-23.jpg" alt="">
-                <p class="ml-4 text-gray text-justify">
-                  Interaksi timbal balik dengan klien menuju pencapaian tujuan yang disepakati.
-                </p>
+          <div class="row d-lg-none mlm-40">
+            <div class="col-lg-12 px-0">
+              <div class="carousel-mobile-stagepadding owl-theme">
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-17.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Jujur dalam menampilkan perilaku produktif untuk memperoleh kepercayaan pelanggan.
+                  </p>
+                </div>
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-18.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Mampu bergerak cepat berdasarkan rencana adaptif.
+                  </p>
+                </div>
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-19.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Memberikan pekerjaan yang responsif, tepat waktu, dan berkualitas.
+                  </p>
+                </div>
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-20.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Mengantisipasi kebutuhan dan persyaratan klien.
+                  </p>
+                </div>
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-21.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Antusiasme dan pengabdian kepada pelanggan serta berbagi proses kreatif.
+                  </p>
+                </div>
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-22.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Fokus pada solusi, bukan argumen, mengantisipasi masalah terlebih dahulu dan tetap mengingat tujuan akhir.
+                  </p>
+                </div>
+                <div class="item">
+                  <img class="mb-3" src="images/nilai-nilai-mobile-23.jpg" alt="">
+                  <p class="ml-4 text-gray text-justify">
+                    Interaksi timbal balik dengan klien menuju pencapaian tujuan yang disepakati.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
