--- a/about.html
+++ b/about.html
@@ -569,13 +569,15 @@
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
-          <div class="row d-lg-none">
-            <div class="carousel-mobile-stagepadding owl-theme">
-              <div class="item">
-                <img src="images/about-dewan-content-02.jpg" alt="">
-              </div>
-              <div class="item">
-                <img src="images/about-dewan-content-02.jpg" alt="">
+          <div class="row d-lg-none mlm-40">
+            <div class="col-lg-12 px-0">
+              <div class="carousel-mobile-stagepadding owl-theme">
+                <div class="item">
+                  <img src="images/about-dewan-content-02.jpg" alt="">
+                </div>
+                <div class="item">
+                  <img src="images/about-dewan-content-02.jpg" alt="">
+                </div>
               </div>
             </div>
           </div>
@@ -597,13 +599,15 @@
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
-          <div class="row mt-5 d-lg-none">
-            <div class="carousel-mobile-stagepadding owl-theme">
-              <div class="item">
-                <img src="images/about-dewan-content-02.jpg" alt="">
-              </div>
-              <div class="item">
-                <img src="images/about-dewan-content-02.jpg" alt="">
+          <div class="row mt-5 d-lg-none mlm-40">
+            <div class="col-lg-12 px-0">
+              <div class="carousel-mobile-stagepadding owl-theme">
+                <div class="item">
+                  <img src="images/about-dewan-content-02.jpg" alt="">
+                </div>
+                <div class="item">
+                  <img src="images/about-dewan-content-02.jpg" alt="">
+                </div>
               </div>
             </div>
           </div>
