--- a/businesses.html
+++ b/businesses.html
@@ -205,7 +205,12 @@
                     <br><br>
                     Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang tenaga kerja berkualitas serta alat produksi yang tepat untuk melaksanakan kegiatan penambangan batubara.
                     <br>
-                    <a href="projects.html" class="link-orange-border my-5 d-inline-block">
+                    <a href="projects.html" class="link-orange-border my-5 d-none d-lg-inline-block">
+                      <span class="text-orange">
+                        LIHAT PROYEK KAMI
+                      </span> 
+                    </a>
+                    <a href="projects.html" class="link-orange-border text-center my-5 d-block d-lg-none">
                       <span class="text-orange">
                         LIHAT PROYEK KAMI
                       </span> 
@@ -278,11 +283,11 @@
       <div class="row text-center mt-lg-5">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Lihat Perjalanan Kami
+                Ada yang Ingin Ditanyakan?
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Lihat<br>
-                Perjalanan Kami
+                Ada yang<br>
+                Ingin Ditanyakan?
               </h4>
           </div>
       </div>
