--- a/businesses.html
+++ b/businesses.html
@@ -351,7 +351,7 @@
                   <source src="images/psm.mp4" type="video/mp4">
                 </video>
           </div>
-          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3">
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3 pb-lg-0 pb-5">
             <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
@@ -381,7 +381,7 @@ Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediak
               <source src="images/esp.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3">
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3 pb-lg-0 pb-5">
             <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
               <div class="inline-block pl-lg-4">
