--- a/businesses.html
+++ b/businesses.html
@@ -354,8 +354,8 @@
           <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3 pb-lg-0 pb-5">
             <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
-              <div class="inline-block pl-lg-4">
-                <img src="images/logo-bisnis-psm-05.png" alt="">
+              <div class="pl-lg-4">
+                <img class="logo-pt" src="images/logo-bisnis-psm-05.png" alt="">
                   <p class="text-gray text-justify">
                     PT Palaran Sinergi Mas bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Palaran, berupa stock pile seluas 32 hektar yang dapat menampung 250.000 mt batubara disamping menyediakan konveyor dengan kapasitas hingga 1.000 mt/jam.
                     <br><br>
@@ -384,7 +384,7 @@ Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediak
           <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4 mx-lg-0 mx-3 pb-lg-0 pb-5">
             <img class="float-right d-none d-lg-block" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
             <div class="content-wrapper d-flex">
-              <div class="inline-block pl-lg-4">
+              <div class="pl-lg-4">
                 <img src="images/logo-bisnis-esp-05.png" alt="">
                   <p class="text-gray text-justify">
                     PT Embalut Sinergi Mas Persada bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Embalut, berupa stock pile seluas 7 hektar berikut konveyor dengan kapasitas hingga 500 mt/jam.  Dermaga dapat mengakomodasi tongkang batubara ukuran 270 kaki hingga 300 kaki.  Diantara perusahaan yang menggunakan layanan ini adalah sebuah perusahaan tambang dari JSI Group.
