--- a/csr.html
+++ b/csr.html
@@ -193,8 +193,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 py-lg-5 pl-lg-5 pl-4">
-          <br><br><br>
+        <div class="col-lg-5 py-lg-5 pl-lg-5 pl-4 ml-3 ml-lg-0">
+          <br class="d-none d-lg-block"><br class="d-none d-lg-block"><br>
           <h2 class="text-orange mb-lg-3 mt-lg-5">
             Instalasi Pengolahan Air
           </h2>
@@ -205,11 +205,11 @@
       </div>
       <div class="row my-lg-5 py-5">
         <div class="col-lg-4 offset-lg-1 py-lg-5 pl-4 order-2 order-lg-1">
-          <br><br><br>
-          <h2 class="text-orange mb-lg-3 mt-lg-5">
-            Khitanan Masal
+          <br class="d-none d-lg-block"><br class="d-none d-lg-block"><br>
+          <h2 class="text-orange mb-lg-3 mt-lg-5 ml-lg-0 ml-3">
+            Khitanan Massal
           </h2>
-          <p class="text-gray brief-2">
+          <p class="text-gray brief-2  ml-lg-0 ml-3">
             Bekerjasama dengan Dana Peduli Umat Kaltim mengadakan khitanan massal bagi anak-anak
           </p>
         </div>
@@ -222,16 +222,16 @@
         </div>
       </div>
     </div>  
-    <div class="container-fluid footer-top bg-white py-lg-5">
+    <div class="container-fluid footer-top bg-white py-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Ingin tau lebih mengenai Program kami?
+                Ingin Tau lebih Mengenai Program Kami?
               </h4>
               <h4 class="text-dark-blue pb-lg-4 pb-5 d-lg-none">
-                Ingin tau lebih<br>
-                mengenai<br>
-                Program kami?
+                Ingin Tau<br>
+                Lebih Mengenai<br>
+                Program Kami?
               </h4>
           </div>
       </div>
