--- a/gallery.html
+++ b/gallery.html
@@ -159,9 +159,14 @@
     <div class="container-fluid bus-mid">
       <div class="row first-section">
         <div class="col-lg-12 text-center" data-aos="fade-up">
-          <p class="text-white">
+          <p class="text-white d-none d-lg-block">
             Dengan keinginan untuk berbagi cerita dan pengalaman, kami ingin membagikan<br>
             momen-momen kegiatan Ansaf dalam proses perkembangan dan pertumbuhan kami<br>
+            melalui galeri ini
+          </p>
+          <p class="text-white text-justify d-lg-none">
+            Dengan keinginan untuk berbagi cerita dan pengalaman, kami ingin membagikan
+            momen-momen kegiatan Ansaf dalam proses perkembangan dan pertumbuhan kami
             melalui galeri ini
           </p>
         </div>
