--- a/contact.html
+++ b/contact.html
@@ -193,21 +193,21 @@
       <div class="row mt-lg-5">
         <div class="col-lg-6">
             <div class="form-group left-forms">
-              <label class="font-roboto text-gray">NAMA :</label>
+              <label class="font-roboto text-orange">NAMA :</label>
               <input type="text" class="form-control input-gray">
             </div>
             <div class="form-group left-forms">
-              <label class="font-roboto text-gray">EMAIL :</label>
+              <label class="font-roboto text-orange">EMAIL :</label>
               <input type="text" class="form-control input-gray">
             </div>
             <div class="form-group left-forms">
-              <label class="font-roboto text-gray">SUBJEK :</label>
+              <label class="font-roboto text-orange">SUBJEK :</label>
               <input type="text" class="form-control input-gray">
             </div>
         </div>
         <div class="col-lg-6">
           <div class="form-group my-lg-5">
-            <label class="font-roboto text-gray">PESAN :</label>
+            <label class="font-roboto text-orange">PESAN :</label>
             <textarea class="form-control input-gray" rows="7"></textarea>
           </div>
           <a href="#" class="link-blue-border d-block py-lg-2 py-3 my-lg-0 my-5 text-center button-form">
