--- a/about.html
+++ b/about.html
@@ -551,7 +551,8 @@
         </div>
       </div>
     </div>
-    <div id="dewan" class="container-fluid bg-light-gray dewan-direksi">
+    <div id="dewan" class="container-fluid bg-light-gray dewan-direksi position-relative">
+      <div id="dewan_mobile"></div>
       <div class="row pt-5 mt-lg-5">
         <div class="col-lg-3"></div>
         <div class="col-lg-8 pl-lg-5 ml-lg-0 ml-4">
