--- a/gallery.html
+++ b/gallery.html
@@ -174,7 +174,7 @@
       <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center" data-aos="fade-up">
         <div class="col-lg-4 col-6 my-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-new-content-04.jpg" alt="">
+            <img class="img-fluid die" src="images/gallery-new-content-04.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-4 col-6 my-3">
