--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white text-justify w-75">
+                                    <p class="text-white text-justify">
                                         Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
@@ -246,7 +246,7 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white text-justify w-75">
+                                    <p class="text-white text-justify">
                                         Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
@@ -291,7 +291,7 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white text-justify w-75">
+                                    <p class="text-white text-justify">
                                         Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
@@ -336,7 +336,7 @@
                                         through
                                         Partnership
                                     </h1>
-                                    <p class="text-white text-justify w-75">
+                                    <p class="text-white text-justify">
                                         Ansaf sangat tepat menjadi mitra karena Kami tidak pernah melihat hambatan ataupun masalah, Kami hanya melihat situasi yang membutuhkan solusi.
                                     </p>
                                 </div>
