--- a/about.html
+++ b/about.html
@@ -293,10 +293,10 @@
               <h6 class="text-orange my-lg-2">
                 INTEGRITY
               </h6>
-              <p class="text-gray my-lg-3">
-                Menumbuhkan integritas dikalangan<br>
-                para pemangku kepentingan guna<br>
-                memperoleh kepercayaan mitra<br>
+              <p class="text-gray my-lg-3 text-justify mr-lg-4">
+                Menumbuhkan integritas dikalangan
+                para pemangku kepentingan guna
+                memperoleh kepercayaan mitra
                 kerja.
               </p>
             </div>
@@ -305,12 +305,12 @@
               <h6 class="text-orange my-lg-2">
                 CONTINUOUS DEVELOPMENT
               </h6>
-              <p class="text-gray my-lg-3">
-                Mendorong peningkatan<br>
-                kompetensi guna membangun<br>
-                sumber daya manusia yang tangguh <br>
-                dan bertanggung jawab yang<br>
-                mampu melakukan perbaikan terus<br>
+              <p class="text-gray my-lg-3 text-justify mr-lg-4">
+                Mendorong peningkatan
+                kompetensi guna membangun
+                sumber daya manusia yang tangguh 
+                dan bertanggung jawab yang
+                mampu melakukan perbaikan terus
                 menerus.
 
               </p>
@@ -320,11 +320,11 @@
               <h6 class="text-orange my-lg-2">
                 OPTIMUM PRODUCTION
               </h6>
-              <p class="text-gray my-lg-3">
-                Memperkuat sistim operasional<br>
-                agar efektif mengelola dan<br>
-                memanfaatkan sumberdaya<br>
-                perusahaan untuk mencapai<br>
+              <p class="text-gray my-lg-3 text-justify mr-lg-4">
+                Memperkuat sistim operasional
+                agar efektif mengelola dan
+                memanfaatkan sumberdaya
+                perusahaan untuk mencapai
                 produksi optimal.
               </p>
             </div>
@@ -333,9 +333,9 @@
               <h6 class="text-orange my-lg-2">
                 TEAMWORK
               </h6>
-              <p class="text-gray my-lg-3">
-                Menghargai loyalitas, kebersamaan<br>
-                dan kerja keras secara adil untuk<br>
+              <p class="text-gray my-lg-3 text-justify mr-lg-4">
+                Menghargai loyalitas, kebersamaan
+                dan kerja keras secara adil untuk
                 membangun kerjasama yang kokoh.
 
               </p>
@@ -345,11 +345,11 @@
               <h6 class="text-orange my-lg-2">
                 EXCELLENCE
               </h6>
-              <p class="text-gray my-lg-3">
-                Mengoptimalkan potensi dan<br>
-                pengalaman perusahaan yang<br>
-                menghadirkan solusi bagi mitra<br>
-                kerja, masyarakat dan lingkungan<br>
+              <p class="text-gray my-lg-3 text-justify mr-lg-4">
+                Mengoptimalkan potensi dan
+                pengalaman perusahaan yang
+                menghadirkan solusi bagi mitra
+                kerja, masyarakat dan lingkungan
                 hidup.
               </p>
             </div>
