--- a/about.html
+++ b/about.html
@@ -459,43 +459,43 @@
           <div class="row my-lg-5 d-none d-lg-flex">
             <div class="col-lg-4">
               <img src="images/about-nilai-content-02.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Jujur dalam menampilkan perilaku produktif untuk memperoleh kepercayaan pelanggan.
               </p>
             </div>
             <div class="col-lg-4">
               <img src="images/about-nilai-content-03.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Mampu bergerak cepat berdasarkan rencana adaptif.
               </p>
             </div>
             <div class="col-lg-4">
               <img src="images/about-nilai-content-04.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Memberikan pekerjaan yang responsif, tepat waktu, dan berkualitas.
               </p>
             </div>
             <div class="col-lg-4">
               <img src="images/about-nilai-content-05.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Mengantisipasi kebutuhan dan persyaratan klien.
               </p>
             </div>
             <div class="col-lg-4">
               <img src="images/about-nilai-content-06.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Antusiasme dan pengabdian kepada pelanggan serta berbagi proses kreatif.
               </p>
             </div>
             <div class="col-lg-4">
               <img src="images/about-nilai-content-07.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Fokus pada solusi, bukan argumen, mengantisipasi masalah terlebih dahulu dan tetap mengingat tujuan akhir.
               </p>
             </div>
             <div class="col-lg-4">
               <img src="images/about-nilai-content-08.jpg" alt="">
-              <p class="my-lg-4 text-gray">
+              <p class="my-lg-4 text-gray text-justify mr-lg-5 pr-lg-3">
                 Interaksi timbal balik dengan klien menuju pencapaian tujuan yang disepakati.
               </p>
             </div>
