--- a/businesses.html
+++ b/businesses.html
@@ -271,9 +271,9 @@
           <div class="container">
               <div class="row text-center mb-lg-0 mb-5">
                   <div class="col-lg-12 pb-lg-0 pb-5">
-                    <a href="gallery.html" class="link-orange-border mx-lg-4 mb-5 mb-lg-0">
+                    <a href="contact.html" class="link-orange-border mx-lg-4 mb-5 mb-lg-0">
                       <span class="text-orange">
-                        GALERI
+                        HUBUNGI KAMI
                       </span> 
                    </a>
                   </div>
