--- a/projects.html
+++ b/projects.html
@@ -182,7 +182,7 @@
               <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Proyek Saat ini</a>
             </li>
             <li class="col px-0">
-              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Proyek Yang Sudah Selesai</a>
+              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Proyek yang Sudah Selesai</a>
             </li>
           </ul>
           <!-- Tab panes -->
