--- a/csr.html
+++ b/csr.html
@@ -226,10 +226,10 @@
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Ingin Tau lebih Mengenai Program Kami?
+                Ingin Tahu lebih Mengenai Program Kami?
               </h4>
               <h4 class="text-dark-blue pb-lg-4 pb-5 d-lg-none">
-                Ingin Tau<br>
+                Ingin Tahu<br>
                 Lebih Mengenai<br>
                 Program Kami?
               </h4>
