--- a/career.html
+++ b/career.html
@@ -172,7 +172,7 @@
         <div class="col-lg-5 pl-lg-0 p-4">
           <img class="w-100 img-fluid px-lg-0 px-3 mb-lg-0 mb-4" src="images/career-img-content-03.jpg" alt=""/>
         </div>
-        <div class="col-lg-6 offset-lg-1 pb-lg-5 pr-lg-5 px-5 pl-lg-3">
+        <div class="col-lg-6 offset-lg-1 pb-lg-5 pr-lg-5 px-5 pl-lg-3 pt-lg-4">
           <h5 class="text-orange">
             Accounting Supervisor
           </h5>
@@ -210,7 +210,7 @@
         </div>
       </div>
       <div class="row py-5">
-        <div class="pl-lg-5 col-lg-6 pb-lg-5 px-5 pl-lg-4 order-lg-1 order-2">
+        <div class="pl-lg-5 col-lg-6 pb-lg-5 px-5 pl-lg-4 order-lg-1 order-2 pt-lg-4">
           <h5 class="text-orange">
             Production Analyst
           </h5>
