--- a/businesses.html
+++ b/businesses.html
@@ -295,7 +295,7 @@
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
-             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> +62 21 5764 388-89</span> 
+             <span class="text-orange">+62 21 5764 388-89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
              info@ansaf.co.id
