--- a/contact.html
+++ b/contact.html
@@ -306,7 +306,7 @@
                     NILAI-NILAI INTI
                   </span> 
                   </a>
-                  <a href="about.html#dewan" class="link-orange-border d-none d-lg-block mx-lg-4">
+                  <a href="about.html#dewan" class="link-orange-border d-none d-lg-inline-block mx-lg-4">
                     <span class="text-orange">
                       DEWAN KOMISARIS
                     </span> 
