--- a/businesses.html
+++ b/businesses.html
@@ -294,7 +294,7 @@
         </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
-          <a href="#" class="link-orange-border">
+          <a href="tel:021576438889" class="link-orange-border">
              <span class="text-orange">+62 21 5764 388-89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
