--- a/about.html
+++ b/about.html
@@ -374,11 +374,11 @@
             <div class="item">
                 <div class="row">
                   <div class="col-lg-12">
-                    <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-12.png" alt="">
+                    <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-12.png" alt="">
                     <h6 class="text-orange text-center mt-4">
                       INTEGRITY
                     </h6>
-                    <p class="text-gray text-center mr-4">
+                    <p class="text-gray text-center">
                       Menumbuhkan integritas dikalangan para pemangku kepentingan guna memperoleh kepercayaan mitra kerja.
                     </p>
                   </div>
@@ -387,11 +387,11 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-13.png" alt="">
+                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-13.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     CONTINUOUS DEVELOPMENT
                   </h6>
-                  <p class="text-gray text-center mr-4">
+                  <p class="text-gray text-center">
                     Mendorong peningkatan kompetensi guna membangun sumber daya manusia yang tangguh dan bertanggung jawab yang mampu melakukan perbaikan
                     terus menerus.
                   </p>
@@ -401,11 +401,11 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-14.png" alt="">
+                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-14.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     OPTIMUM PRODUCTION
                   </h6>
-                  <p class="text-gray text-center mr-4">
+                  <p class="text-gray text-center">
                     Memperkuat sistim operasional agar efektif mengelola dan memanfaatkan sumberdaya perusahaan untuk mencapai produksi optimal.
                   </p>
                 </div>
@@ -414,11 +414,11 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-15.png" alt="">
+                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-15.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     TEAMWORK
                   </h6>
-                  <p class="text-gray text-center mr-4">
+                  <p class="text-gray text-center">
                     Menghargai loyalitas, kebersamaan dan kerja keras secara adil untuk membangun kerjasama yang kokoh.
                   </p>
                 </div>
@@ -427,11 +427,11 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-16.png" alt="">
+                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-16.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     EXCELLENCE
                   </h6>
-                  <p class="text-gray text-center mr-4">
+                  <p class="text-gray text-center">
                     Mengoptimalkan potensi dan pengalaman perusahaan yang menghadirkan solusi bagi mitra kerja, masyarakat dan lingkungan hidup.
                   </p>
                 </div>
