--- a/about.html
+++ b/about.html
@@ -505,43 +505,43 @@
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-17.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Jujur dalam menampilkan perilaku produktif untuk memperoleh kepercayaan pelanggan.
                   </p>
                 </div>
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-18.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Mampu bergerak cepat berdasarkan rencana adaptif.
                   </p>
                 </div>
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-19.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Memberikan pekerjaan yang responsif, tepat waktu, dan berkualitas.
                   </p>
                 </div>
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-20.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Mengantisipasi kebutuhan dan persyaratan klien.
                   </p>
                 </div>
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-21.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Antusiasme dan pengabdian kepada pelanggan serta berbagi proses kreatif.
                   </p>
                 </div>
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-22.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Fokus pada solusi, bukan argumen, mengantisipasi masalah terlebih dahulu dan tetap mengingat tujuan akhir.
                   </p>
                 </div>
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-23.jpg" alt="">
-                  <p class="ml-4 text-gray text-justify">
+                  <p class="ml-4 text-gray text-justify mr-5">
                     Interaksi timbal balik dengan klien menuju pencapaian tujuan yang disepakati.
                   </p>
                 </div>
