--- a/projects.html
+++ b/projects.html
@@ -516,15 +516,25 @@
                                   PT Insani Bara Perkasa<br>
                                   <br>
                                   Lokasi :<br>
-                                  1. Blok Separi Lengan Barat<br>
-                                  2. Blok Simpang Pasir<br>
-                                  3. Blok Purwajaya<br>
-                                  4. Blok Tani Bakti<br>
-                                  5. Perangat<br>
+                                  1. Blok Simpang Pasir<br>
+                                  2. Blok Purwajaya<br>
+                                  3. Blok Tani Bakti<br>
+                                  4. Perangat<br>
                                 </h6>
                               
                               </div>
                               </span>
+
+                              <span class="popup_btn" style="top:28.2%; left:44.4%;">
+                                <div class="close blue"></div>
+                                <div class="point-popup">
+                                  <h6>
+                                    PT Insani Bara Perkasa<br>
+                                    Lokasi : Blok Separi Lengan Barat<br>
+                                  </h6>
+                                
+                                </div>
+                                </span>
 
                               <span class="popup_btn" style="top:24%; left:42.8%;">
                                 <div class="close blue"></div>
