--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
              <span class="text-orange">+62 21 5764 388 - 89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
-              info@ansaf.co.id
+             <a class="text-gray" href="mailto:info@ansaf.co.id"> info@ansaf.co.id</a>
           </p>
       </div>
       <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
