--- a/csr.html
+++ b/csr.html
@@ -226,7 +226,7 @@
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Ingin Tahu lebih Mengenai Program Kami?
+                Ingin Tahu Lebih Mengenai Program Kami?
               </h4>
               <h4 class="text-dark-blue pb-lg-4 pb-5 d-lg-none">
                 Ingin Tahu<br>
