--- a/csr.html
+++ b/csr.html
@@ -163,7 +163,7 @@
           <img data-aos="fade-up" class="content-mid d-lg-none" src="images/csr-mid-first-section-mobile-07.jpg" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block pl-lg-5 offset-lg-1" data-aos="fade-right">
-                <p class="text-white brief">
+                <p class="text-white brief text-justify">
                   ANSAF menyadari makna CSR sebagai sarana membangun
                   hubungan sosial dengan masyarakat sekitar proyek yang
                   pelaksanaannya harus tepat sasaran dan membawa manfaat
