--- a/contact.html
+++ b/contact.html
@@ -171,15 +171,15 @@
                     <h2 class="text-white mb-4">
                       Masih Memiliki Pertanyaan?
                     </h2>
-                    <p class="text-white font-roboto d-none d-lg-block">
-                      Kami akan senang hati mendengar pertanyaan Anda<br>
-                      dan berusaha untuk memberikan informasinya.<br>
+                    <p class="text-white font-roboto d-none d-lg-block text-justify">
+                      Kami akan senang hati mendengar pertanyaan Anda
+                      dan berusaha untuk memberikan informasinya.
                       Silakan mengirimkannya melalui form di bawah ini.
                     </p>
-                    <p class="text-white font-roboto d-lg-none">
-                      Kami akan senang hati mendengar pertanyaan<br>
-                      Anda dan berusaha untuk memberikan<br>
-                      informasinya. Silakan mengirimkannya melalui<br>
+                    <p class="text-white font-roboto d-lg-none text-justify">
+                      Kami akan senang hati mendengar pertanyaan
+                      Anda dan berusaha untuk memberikan
+                      informasinya. Silakan mengirimkannya melalui
                       form di bawah ini.
                     </p>
                 </div>
