--- a/contact.html
+++ b/contact.html
@@ -171,16 +171,10 @@
                     <h2 class="text-white mb-4">
                       Masih Memiliki Pertanyaan?
                     </h2>
-                    <p class="text-white font-roboto d-none d-lg-block text-justify">
+                    <p class="text-white font-roboto text-justify">
                       Kami akan senang hati mendengar pertanyaan Anda
                       dan berusaha untuk memberikan informasinya.
                       Silakan mengirimkannya melalui form di bawah ini.
-                    </p>
-                    <p class="text-white font-roboto d-lg-none text-justify">
-                      Kami akan senang hati mendengar pertanyaan
-                      Anda dan berusaha untuk memberikan
-                      informasinya. Silakan mengirimkannya melalui
-                      form di bawah ini.
                     </p>
                 </div>
               </div>
