--- a/about.html
+++ b/about.html
@@ -374,7 +374,7 @@
             <div class="item">
                 <div class="row">
                   <div class="col-lg-12">
-                    <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-12.png" alt="">
+                    <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-12.png" alt="">
                     <h6 class="text-orange text-center mt-4">
                       INTEGRITY
                     </h6>
@@ -387,7 +387,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-13.png" alt="">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-13.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     CONTINUOUS DEVELOPMENT
                   </h6>
@@ -401,7 +401,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-14.png" alt="">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-14.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     OPTIMUM PRODUCTION
                   </h6>
@@ -414,7 +414,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-15.png" alt="">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-15.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     TEAMWORK
                   </h6>
@@ -427,7 +427,7 @@
             <div class="item">
               <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-fluid w-50 pl-3 mx-auto" src="images/about-visi-content-mobile-16.png" alt="">
+                  <img class="img-fluid w-50 mx-auto" src="images/about-visi-content-mobile-16.png" alt="">
                   <h6 class="text-orange text-center mt-4">
                     EXCELLENCE
                   </h6>
