--- a/about.html
+++ b/about.html
@@ -500,7 +500,7 @@
               </p>
             </div>
           </div>
-          <div class="row d-lg-none mlm-40">
+          <div class="row d-lg-none">
             <div class="col-lg-12 px-0">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
