--- a/about.html
+++ b/about.html
@@ -501,7 +501,7 @@
             </div>
           </div>
           <div class="row d-lg-none">
-            <div class="col-lg-12 px-0">
+            <div class="col-lg-12 pl-0">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
                   <img class="mb-3" src="images/nilai-nilai-mobile-17.jpg" alt="">
