--- a/contact.html
+++ b/contact.html
@@ -220,7 +220,7 @@
             Jl. Dr. Ide Anak Agung Gde Agung<br>
             Kuningan Timur, Setiabudi<br>
             Jakarta Selatan 12950<br>
-            +62 21 5764 388 - 89<br>
+            <a href="tel:021576438889">+62 21 5764 388 - 89</a><br>
             </p><br>
             <h6 class="text-orange d-none d-lg-block">
               Samarinda Region Office
@@ -229,7 +229,7 @@
               Jl. KH. Wahid Hasyim 1 No. 26, Sempaja Selatan<br>
               Samarinda Utara, Samarinda<br>
               Kalimantan Timur 75119<br>
-              +62 541 260 226<br>
+              <a href="tel:0541260226">+62 541 260 226</a><br>
             </p><br>
             <h6 class="text-orange d-none d-lg-block">
               Lahat Region Office
@@ -254,7 +254,7 @@
             Jl. KH. Wahid Hasyim 1 No. 26, Sempaja Selatan<br>
             Samarinda Utara, Samarinda<br>
             Kalimantan Timur 75119<br>
-            +62 541 260 226<br>
+            <a href="tel:0541260226">+62 541 260 226</a><br>
           </p><br>
           <h6 class="text-orange">
             Lahat Region Office
