--- a/about.html
+++ b/about.html
@@ -571,7 +571,7 @@
             </div>
           </div>
           <div class="row d-lg-none mlm-40">
-            <div class="col-lg-12 px-0">
+            <div class="col-lg-12">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
                   <img src="images/about-dewan-content-02.jpg" alt="">
@@ -601,7 +601,7 @@
             </div>
           </div>
           <div class="row mt-5 d-lg-none mlm-40">
-            <div class="col-lg-12 px-0">
+            <div class="col-lg-12">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
                   <img src="images/about-dewan-content-02.jpg" alt="">
