--- a/about.html
+++ b/about.html
@@ -570,8 +570,8 @@
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
-          <div class="row d-lg-none mlm-40">
-            <div class="col-lg-12">
+          <div class="row d-lg-none">
+            <div class="col-lg-12 pl-0">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
                   <img src="images/about-dewan-content-02.jpg" alt="">
@@ -600,8 +600,8 @@
               <img src="images/about-dewan-content-02.jpg" alt="">
             </div>
           </div>
-          <div class="row mt-5 d-lg-none mlm-40">
-            <div class="col-lg-12">
+          <div class="row mt-5 d-lg-none">
+            <div class="col-lg-12 pl-0">
               <div class="carousel-mobile-stagepadding owl-theme">
                 <div class="item">
                   <img src="images/about-dewan-content-02.jpg" alt="">
